# mail-mind-ai-agent

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup_oauth.py
.github/workflows/: mail_mind_ai_agent.yml
agents/: gemini_agent.py
app/: main.py
app/services/: discord_service.py  notion_service.py
services/: gmail_service.py
